--- a/ZeroRacism/styles.css
+++ b/ZeroRacism/styles.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@500;700&family=Nunito:wght@400&family=Poppins:wght@300&family=Raleway:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Open+Sans:wght@300;500;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+
 @keyframes fadeIn {
     from{
         opacity: 0;
@@ -16,32 +17,27 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    border: 1p dotted var(--colorSecundario);
 } 
 html{
     width: 100%;
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 body{
     width: 100%;
     overflow-x: hidden;
-    font-family: sans-serif;
-    background-color: var(--colorPrimario);
-    color: var(--colorEnPrimario);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-h1,h2 {
-    letter-spacing: -1px;
+    font-family: 'Open Sans', sans-serif;
+    background-color: var(--colorSecundarioT);
 }
 p, span{
     font-size: var(--texto);
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
     line-height: 30px;
 }
-h1, h2, h3 {
+h1, h2, h3, a {
     user-select: none;
+    font-weight: 800;
 }
 :root{
     --colorPrimario: rgb(246, 246, 245);
@@ -51,7 +47,7 @@ h1, h2, h3 {
     --colorEnPrimarioT: rgba(0, 0, 0, 0.7);
     
     --colorSecundario: rgb(255, 87, 87);
-    --colorSecundarioT: rgba(255, 87, 87, 0.7);
+    --colorSecundarioT: rgba(250, 137, 137);
 
     --texto: clamp(1rem, 0.7153rem + 1.64vw, 1.4rem);
     --subtitulo: clamp(1.8rem, 1.4rem + 3.2vw, 3rem);
@@ -65,27 +61,24 @@ h1, h2, h3 {
 
 nav {
     width: 100%;
-    height: 10vh;
-    background-color: white;
-    box-shadow: 0 0 2vh rgba(0, 0, 0, 0.3);
+    height: min(7vw, 15vh);
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding: 0 10vw;
+    background-color: transparent;
 }
 .nav-left {
-    height: 10vh;
+    height: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding-left: 2vw;
     gap: 1vw;
 }
-.nav-left img {
-    max-height: 8vh;
-    width: auto;
-    aspect-ratio: 1/1;
-}
 .nav-left h2 {
-    font-size: calc(var(--texto)*1.5);
+    font-size: var(--banner);
+    font-family: 'Alfa Slab One', sans-serif;
+    color: var(--colorPrimario);
+    font-weight: 400;
 }
 
 .nav-right{
@@ -93,40 +86,228 @@ nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding-right: 2vw;
 }
-.nav-right a{
-    height: 80%;
-    width: 40ch;
+.nav-right a {
+    font-size: calc(var(--texto)*1.3);
+    font-weight: 800;
+    color: var(--colorPrimario);
+    text-decoration: none;
+}
+.nav-right a:hover {
+    text-decoration: underline;
+}
+
+header{
+    background-color: transparent;
+    width: 100%;
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2vh;
+    color: var(--colorPrimario);
+    text-align: center;
+    padding: 5vh 0;
+}
+header h1 {
+    font-size: var(--banner);
+    font-weight: 800;
+    max-width: min(600px, 50%);
+    margin-top: min(5vw, 7vh);
+}
+header h4 {
+    font-size: calc(var(--texto)*1.3);
+    font-weight: 300;
+    max-width: min(600px, 50%);
+    margin-bottom: min(2vw, 4vh);
+}
+header img {
+    font-size: calc(var(--texto)*1.3);
+    width: 25ch;
+    height: auto;
+    margin-bottom: min(17vh, 8.5vw);
+}
+
+main{
+    background-color: var(--colorPrimario);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+main > div {
+    display: grid;
+    grid-template-columns: 3fr 2fr 3fr;
+    justify-content: center;
+    align-items: center;
+}
+.advantage-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: min(4vh, 2.5vw);
+    padding: 0 min(5vw, 8vh);
+    padding-top: min(10vh, 7vw);
+}
+.advantage {
+    display: flex;
+    flex-direction: column;
+}
+.advantage img {
+    font-size: calc(var(--texto)*1.3);
+    width: 5ch;
+    height: auto;
+    aspect-ratio: 1/1;
+}
+.advantage h3 {
+    font-size: calc(var(--texto)*1.3);
+    text-transform: uppercase;
+}
+.advantage p {
+    max-width: 60%;
+    line-height: 3ch;
+}
+
+
+.advantage-container.left {
+    align-items: flex-end;
+}
+.advantage-container.left .advantage {
+    text-align: right;
+    align-items: flex-end;
+}
+
+.advantage-container.right {
+    align-items: flex-start;
+}
+.advantage-container.right .advantage {
+    text-align: left;
+    align-items: flex-start;
+}
+
+.phone-container {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2ch;
-    background-color: var(--colorSecundario);
-    padding: 1vh;
-    border-radius: 2vh;
-    text-decoration: none;
-    transition: all 1s;
 }
-.nav-right a .download-icon {
-    background-image: url('./res/download-icon.svg');
-    background-position: center;
-    background-size: cover;
-    height: 90%;
+.phone-container img {
+    font-size: calc(var(--texto)*1.3);
+    width: 25ch;
+    height: auto;
+    transform: translateY(-15vh);
+}
+
+.download-inv {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.download-inv a {
+    color: var(--colorPrimario);
+    background-color: var(--colorSecundario);
+    padding: min(4vh, 3vw) min(4.5vh, 3vw);
+    font-size: calc(var(--texto)*1.3);
+    text-decoration: none;
+    border-radius: min(5vh, 4vw);
+    text-transform: uppercase;
+    transition: all 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: min(1vh, 0.8vw);
+}
+.download-inv a:hover {
+    cursor: pointer;
+    background-color: rgba(255, 87, 87, 0.9);
+}
+.download-inv a img {
+    font-size: calc(var(--texto)*1.3);
+    height: 3ch;
     width: auto;
     aspect-ratio: 1/1;
-    transition: inherit;
 }
-.nav-right a span {
-    font-size: var(--texto);
+
+.author {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: min(2vw, 2vh);
+    cursor: pointer;
+    text-decoration: none;
+    background-color: var(--colorSecundario);
+    padding: min(2vh, 1.5vw) 0;
     color: var(--colorPrimario);
-    transition: inherit;
+    margin-top: min(15vh, 15vw);
 }
-.nav-right a:hover .download-icon {
-    transform: translateX(160%);
-    opacity: 1;
+.author span {
+    font-size: calc(var(--texto)*1.3);
+    font-weight: 500;
 }
-.nav-right a:hover span {
-    transform: translateX(200%);
-    visibility: hidden;
+.author h2 {
+    font-family: 'Dancing Script', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: var(--titulo);
+    font-weight: 800;
+}
+
+/*!custom scroll bar*/
+
+::-webkit-scrollbar {
+    width: 1vw;
+    border-radius: min(2vh, 1.5vw);
+ }
+  
+::-webkit-scrollbar-track {
+    background: var(--colorPrimario);
+    box-shadow: inset 0 0 max(2vw, 3vh) var(--colorPrimario); 
+    border-radius: min(2vh, 1.5vw);
+}
+   
+::-webkit-scrollbar-thumb {
+    background: var(--colorSecundarioT); 
+    border-radius: min(2vh, 1.5vw);
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: var(--colorSecundarioT); 
+}
+
+/*!Media queries*/
+@media (pointer: coarse), (pointer:none) {
+    nav {
+        grid-template-columns: none;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav-right{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    main {
+        gap: 5vh;
+    }
+    main > div {
+        grid-template-columns: none;
+        gap: 3vh;
+    }
+    .phone-container img {
+        transform: none;
+        width: 20ch;
+    }
+    .advantage-container {
+        justify-content: center !important;
+        gap: 3vh;
+    }
+    .advantage-container .advantage {
+        width: 100%;
+        text-align: center !important;
+        align-items: center !important;
+    }
 }
